# AdventOfCode

./: .gitignore  2019_1.py  2019_2.py  README.md  pyproject.toml
2015/: 2015_1.py  2015_3.py
2019/: 2019_1.py  2019_2.py  2019_3.py  2019_4.py  2019_5.py  intcode.py
aoc2015/: 2015_1.py  2015_10.py  2015_11.py  2015_12.py  2015_2.py  2015_3.py  2015_4.py  2015_5.py  2015_6.py  2015_7.py  2015_8.py
aoc2019/: 2019_01.py  2019_02.py  2019_03.py  2019_04.py  2019_05.py  2019_06.py  2019_07.py  2019_08.py  2019_09.py  2019_1.py  2019_10.py  2019_11.py  2019_12.py  2019_12_moon_animation.mkv  2019_14.py  2019_16.py  2019_18.py  2019_2.py  2019_20.py  2019_22.py  2019_24.py  2019_3.py  2019_4.py  2019_5.py  2019_6.py  2019_7.py  2019_8.py  2019_9.py  intcode.py
aoc2020/: 2020_01.py  2020_02.py  2020_03.py  2020_04.py  2020_05.py  2020_06.py  2020_07.py  2020_08.py  2020_09.py  2020_11.py  2020_12.py  2020_13.py  2020_14.py  2020_15.py  2020_16.py  2020_18.py  2020_21.py  2020_22.py  2020_25.py
aoc2021/: 2021_01.py  2021_02.py  2021_03.py  2021_04.py  2021_05.py  2021_07.py  2021_08.py  2021_09.py  2021_10.py
aoc2022/: 2022_01.jl  2022_02.jl  2022_03.jl  2022_04.jl  2022_05.jl  2022_06.jl  2022_09.jl  2022_10.jl  2022_11.jl
aoc2023/: 2023_01.py  2023_02.py  2023_03.py  2023_04.py  2023_05.py
utils/: utils.py
