[tool.poetry]
name = "adventofcode"
version = "0.1.0"
description = ""
authors = ["marios <msthoma@yahoo.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
advent-of-code-data = "^1.1.1"
numpy = "^1.21.4"
more-itertools = "^8.12.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
